Appium and POM.xml repositories and footer text changes

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,35 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest</td>
+<td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_ContinueButtonText</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_PartnerTenderNameHeader</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_welcomeMessage2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_PartnerTenderNameisDisplayed</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_CurrentURL</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_WelcomePageTitle</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>BrokenImageTest</td>
@@ -43,11 +19,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_FooterTextisDisplayed</td>
+<td>test_isDLRequired</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_ContinueButton</td>
+<td>test_PartnerTenderNameHeader</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>test_EnrollPageRequiredFieldErrorMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -55,23 +35,23 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_TextBeforeSignInHereLink</td>
+<td>test_ProgressIndicators</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_FooterText</td>
+<td>test_ValidEnrollmentInputFields</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_TitleisDisplayedCenter</td>
+<td>clickOnWelcomePageContinueButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_SignInHereLinkTextisDisplayed</td>
+<td>test_PartnerTenderNameisDisplayed</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_welcomeMessage1</td>
+<td>test_ValidateTermsAndConditions</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
