--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,17 +1,12 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.BrokenImageTest</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_FooterText</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_TitleisDisplayedCenter</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_SignInHereLinkTextisDisplayed</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_TextBeforeSignInHereLink</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_PartnerLogoisDisplayed</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_FooterTextisDisplayed</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_ContinueButton</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_PartnerLogo</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_welcomeMessage1</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_ContinueButtonText</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_PartnerTenderNameHeader</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_welcomeMessage2</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_CurrentURL</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.WelcomePageTest.test_PartnerTenderNameisDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerLogo</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_ProgressIndicators</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_isDLRequired</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerTenderNameisDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.clickOnWelcomePageContinueButton</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_ValidEnrollmentInputFields</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.BrokenImageTest</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerTenderNameHeader</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerLogoisDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_EnrollPageRequiredFieldErrorMessage</td></tr>
 </table>
