--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d6b9d">  <td>24/06/19 18:57:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppium()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.WelcomePageTest@f6efaab]">&gt;&gt;configureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9d6b9d">  <td>24/06/19 18:58:08</td>   <td>47344</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.WelcomePageTest@f6efaab]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a3a2c2">  <td>24/06/19 18:58:06</td>   <td>45570</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WelcomePageTest.driverInitialization()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.WelcomePageTest@f6efaab]">&gt;&gt;driverInitialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a3a2c2">  <td>24/06/19 18:58:07</td>   <td>46777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WelcomePageTest.test_WelcomePageTitle()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.WelcomePageTest@f6efaab]">test_WelcomePageTitle</td> 
+<tr bgcolor="9eae87">  <td>24/06/27 18:33:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.test_ValidateTermsAndConditions()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">test_ValidateTermsAndConditions</td> 
   <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="718965">  <td>24/06/27 18:33:44</td>   <td>9707</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>24/06/27 18:33:32</td>   <td>-1912</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EnrollPageTest.driverInitialization()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">&gt;&gt;driverInitialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="718965">  <td>24/06/27 18:32:57</td>   <td>-37379</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppium()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">&gt;&gt;configureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
