--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,12 +1,12 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerLogo</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_ProgressIndicators</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_isDLRequired</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerTenderNameisDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.brokenImageTest</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testIsDLRequired</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testValidEnrollmentInputFields</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testPartnerTenderNameisDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testEnrollPageRequiredFieldErrorMessage</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.clickOnWelcomePageContinueButton</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_ValidEnrollmentInputFields</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.BrokenImageTest</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerTenderNameHeader</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testPartnerTenderNameHeader</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testProgressIndicators</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testPartnerLogo</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerLogoisDisplayed</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_EnrollPageRequiredFieldErrorMessage</td></tr>
 </table>
