--- a/test-output/old/Mobile BuyDirect Automation Test Suite/classes.html
+++ b/test-output/old/Mobile BuyDirect Automation Test Suite/classes.html
@@ -11,59 +11,59 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_ContinueButtonText</td>
+<td>testCurrentURL</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_PartnerTenderNameHeader</td>
+<td>testTextBeforeSignInHereLink</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_welcomeMessage2</td>
+<td>testTitleisDisplayedCenter</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_PartnerTenderNameisDisplayed</td>
+<td>testPartnerLogo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_WelcomePageTitle</td>
+<td>testWelcomeMessage1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_CurrentURL</td>
+<td>testWelcomeMessage2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>BrokenImageTest</td>
+<td>testWelcomePageTitle</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_PartnerLogoisDisplayed</td>
+<td>testPartnerTenderNameisDisplayed</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_ContinueButton</td>
+<td>brokenImageTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_PartnerLogo</td>
+<td>testSignInHereLinkTextisDisplayed</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_TextBeforeSignInHereLink</td>
+<td>testContinueButtonText</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_TitleisDisplayedCenter</td>
+<td>testPartnerLogoisDisplayed</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_SignInHereLinkTextisDisplayed</td>
+<td>testContinueButton</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_welcomeMessage1</td>
+<td>testPartnerTenderNameHeader</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -97,35 +97,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>BrokenImageTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>test_PartnerLogoisDisplayed</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_isDLRequired</td>
+<td>testProgressIndicators</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_PartnerTenderNameHeader</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_EnrollPageRequiredFieldErrorMessage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_ProgressIndicators</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_PartnerLogo</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test_ValidEnrollmentInputFields</td>
+<td>testPartnerLogo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -133,11 +113,31 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_PartnerTenderNameisDisplayed</td>
+<td>testEnrollPageRequiredFieldErrorMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_ValidateTermsAndConditions</td>
+<td>testValidEnrollmentInputFields</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testPartnerTenderNameisDisplayed</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>brokenImageTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testPartnerTenderNameHeader</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testValidateTermsAndConditions</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testIsDLRequired</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
