--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9eae87">  <td>24/06/27 18:33:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.test_ValidateTermsAndConditions()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">test_ValidateTermsAndConditions</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="718965">  <td>24/06/27 18:33:44</td>   <td>9707</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>24/06/27 18:33:32</td>   <td>-1912</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EnrollPageTest.driverInitialization()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">&gt;&gt;driverInitialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="718965">  <td>24/06/27 18:32:57</td>   <td>-37379</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppium()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@59252cb6]">&gt;&gt;configureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="e3b7dc">  <td>24/07/02 15:30:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppium()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@b968a76]">&gt;&gt;configureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@173967519</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>24/07/02 15:31:50</td>   <td>64404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.testValidateTermsAndConditions()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@b968a76]">testValidateTermsAndConditions</td> 
+  <td>main@173967519</td>   <td></td> </tr>
+<tr bgcolor="e3b7dc">  <td>24/07/02 15:32:27</td>   <td>101071</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@b968a76]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@173967519</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>24/07/02 15:31:49</td>   <td>62946</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EnrollPageTest.driverInitialization()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@b968a76]">&gt;&gt;driverInitialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@173967519</td>   <td></td> </tr>
 </table>
