--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3b7dc">  <td>24/08/08 18:28:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppium()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@72445aba]">&gt;&gt;configureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@173967519</td>   <td></td> </tr>
-<tr bgcolor="6ee7e5">  <td>24/08/08 18:29:39</td>   <td>47808</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EnrollPageTest.driverInitialization()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@72445aba]">&gt;&gt;driverInitialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@173967519</td>   <td></td> </tr>
-<tr bgcolor="e3b7dc">  <td>24/08/08 18:30:14</td>   <td>83267</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@72445aba]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@173967519</td>   <td></td> </tr>
-<tr bgcolor="6ee7e5">  <td>24/08/08 18:29:40</td>   <td>49400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.testTextBeforeSignInHereLink()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@72445aba]">testTextBeforeSignInHereLink</td> 
-  <td>main@173967519</td>   <td></td> </tr>
+<tr bgcolor="91d69f">  <td>24/08/09 17:41:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.configureAppium()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@2445445a]">&gt;&gt;configureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>24/08/09 17:41:49</td>   <td>44778</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EnrollPageTest.driverInitialization()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@2445445a]">&gt;&gt;driverInitialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="91d69f">  <td>24/08/09 17:41:54</td>   <td>49146</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@2445445a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="9cbf7a">  <td>24/08/09 17:41:51</td>   <td>45960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnrollPageTest.testTextBeforeSignInHereLink()[pri:0, instance:org.BIMNetworks.BuyDirect_Test.EnrollPageTest@2445445a]">testTextBeforeSignInHereLink</td> 
+  <td>main@617901222</td>   <td></td> </tr>
 </table>
