--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,23 +1,37 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.brokenImageTest</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testIsDLRequired</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testSignInHereLinkTextisDisplayed</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTextNotificationsLinkOpensNewWindow</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testValidateTermsAndConditions</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testValidEnrollmentInputFields</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testPartnerTenderNameisDisplayed</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.clickOnWelcomePageContinueButton</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTextNotificationsLinkTextIsDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTextBeforeSignInHereLink</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.validateCreatePINPlaceholder</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testPartnerLogo</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTermsAndConditionsLinkTextIsDisplayed</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTermsAndConditionsBeforeTextIsDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testCreatePinToolTipDisplayAndHide</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTermsAndConditionsLinkIsNotBroken</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTextNotificationsLinkIsNotBroken</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.validateEmailAddressPlaceholder</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.validateFirstNamePlaceholder</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTermsAndConditionsLinkOpensNewWindow</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testCombinedTermsAndConditionsText</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testFirstNameLabelIsDisplayedAndCorrect</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testEnrollPageRequiredFieldErrorMessage</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.validateLastNamePlaceholder</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testPartnerTenderNameHeader</td></tr>
-<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testProgressIndicators</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTextNotificationsTextIsDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.brokenImageTest</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTextNotificationsLinkOpensNewWindow</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testValidateTermsAndConditions</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testLastNameLabelIsDisplayedAndCorrect</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testEmailLabelIsDisplayedAndCorrect</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testPinFieldWithToggle</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testMobilePhoneLabelIsDisplayedAndCorrect</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTermsAndConditionsBeforeTextIsDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testTextNotificationsLinkIsNotBroken</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testCombinedTermsAndConditionsText</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testCreatePINLabelIsDisplayedAndCorrect</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testProgressIndicators</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testProgressIndicatorsOnEnrollPage</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_FooterTextisDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.testContinueButtonText</td></tr>
 <tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.test_PartnerLogoisDisplayed</td></tr>
+<tr><td>org.BIMNetworks.BuyDirect_Test.EnrollPageTest.validateMobilePhonePlaceholder</td></tr>
 </table>
