--- a/test-output/old/Mobile BuyDirect Automation Test Suite/methods-not-run.html
+++ b/test-output/old/Mobile BuyDirect Automation Test Suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.BuyDirect.tests.BaseTest.afterSuite</td></tr>
+<tr><td>com.BuyDirect.tests.BaseTest.afterSuite</td></tr>
 </table>
